crates/lang_srv/src/snapshots/roc_ls__tests__as_identifier.snap
---
source: crates/lang_srv/src/server.rs
expression: actual
---
[
    Some(
        Array(
            [
                CompletionItem {
                    label: "outer",
                    kind: Some(
                        Variable,
                    ),
                    detail: Some(
                        "*",
                    ),
                    documentation: None,
                    deprecated: None,
                    preselect: None,
                    sort_text: None,
                    filter_text: None,
                    insert_text: None,
                    insert_text_format: None,
                    insert_text_mode: None,
                    text_edit: None,
                    additional_text_edits: None,
                    command: None,
                    commit_characters: None,
                    data: None,
                    tags: None,
                },
            ],
        ),
    ),
    Some(
        Array(
            [
                CompletionItem {
                    label: "inn",
                    kind: Some(
                        Variable,
                    ),
                    detail: Some(
                        "*",
                    ),
                    documentation: None,
                    deprecated: None,
                    preselect: None,
                    sort_text: None,
                    filter_text: None,
                    insert_text: None,
                    insert_text_format: None,
                    insert_text_mode: None,
                    text_edit: None,
                    additional_text_edits: None,
                    command: None,
                    commit_characters: None,
                    data: None,
                    tags: None,
                },
                CompletionItem {
                    label: "outer",
                    kind: Some(
                        Variable,
                    ),
                    detail: Some(
                        "*",
                    ),
                    documentation: None,
                    deprecated: None,
                    preselect: None,
                    sort_text: None,
                    filter_text: None,
                    insert_text: None,
                    insert_text_format: None,
                    insert_text_mode: None,
                    text_edit: None,
                    additional_text_edits: None,
                    command: None,
                    commit_characters: None,
                    data: None,
                    tags: None,
                },
            ],
        ),
    ),
]
