crates/lang_srv/src/snapshots/roc_ls__tests__inner_change.snap
---
source: crates/lang_srv/src/server.rs
expression: done
---
(
    Ok(
        Err(
            "Not latest version skipping analysis",
        ),
    ),
    Ok(
        Err(
            "Not latest version skipping analysis",
        ),
    ),
    Ok(
        Err(
            "Not latest version skipping analysis",
        ),
    ),
    Ok(
        Err(
            "Not latest version skipping analysis",
        ),
    ),
    Ok(
        Some(
            Array(
                [
                    CompletionItem {
                        label: "one",
                        kind: Some(
                            Variable,
                        ),
                        detail: Some(
                            "{ leak : Num *, potato : a -> a }",
                        ),
                        documentation: None,
                        deprecated: None,
                        preselect: None,
                        sort_text: None,
                        filter_text: None,
                        insert_text: None,
                        insert_text_format: None,
                        insert_text_mode: None,
                        text_edit: None,
                        additional_text_edits: None,
                        command: None,
                        commit_characters: None,
                        data: None,
                        tags: None,
                    },
                    CompletionItem {
                        label: "two",
                        kind: Some(
                            Variable,
                        ),
                        detail: Some(
                            "Num *",
                        ),
                        documentation: None,
                        deprecated: None,
                        preselect: None,
                        sort_text: None,
                        filter_text: None,
                        insert_text: None,
                        insert_text_format: None,
                        insert_text_mode: None,
                        text_edit: None,
                        additional_text_edits: None,
                        command: None,
                        commit_characters: None,
                        data: None,
                        tags: None,
                    },
                ],
            ),
        ),
    ),
    Ok(
        Err(
            "Not latest version skipping analysis",
        ),
    ),
    Ok(
        Ok(
            (),
        ),
    ),
)
